--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
 
     <!--Page Title-->
-    <title>17an-website-stellaron</title>
+    <title>17an-website-stellaron-adhipuspo</title>
 
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="" />
